<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:andorid="http://schemas.android.com/apk/res-auto">
 <item
     android:id="@+id/kvizovi"
     android:icon="@drawable/lista"
     android:title="@string/navKvizovi"
     />
 <item
     android:id="@+id/predmeti"
     android:icon="@drawable/dodaj"
     android:title="@string/navPredmeti"
     />

</menu>